--- a/src/components/profile/ProfileHeader.css
+++ b/src/components/profile/ProfileHeader.css
@@ -1,5 +1,6 @@
 :root{
     --etat-color:#71767b;
+    --font-familly:"Segoe UI", "Open Sans", "Helvetica Neue", sans-serif;;
 }
 
 
@@ -8,16 +9,14 @@
     height: fit-content;
     border: 1px solid gainsboro;
     border-bottom: none;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    font-family:  var(--font-familly);
   }
   #box-top {
     position: fixed;
     display: flex;
     width: 100%;
     height: 53px;
-    max-width: 617px;
-    margin-left: -8px;
+    max-width: 609px;
     background-color: rgba(0, 0, 0, 0.65);
     box-sizing: border-box;
     border-bottom: 1px solid rgba(128, 128, 128, 0.436);
@@ -38,9 +37,10 @@
     align-items: center;
     transition: 0.3s;
     margin: 6px 1px;
+    cursor: pointer;
   }
   #back-icon-box:hover {
-    background: rgb(230, 230, 230);
+    background: rgba(53, 43, 43, 0.597);
   }
   #box-top-right {
     display: flex;
@@ -50,26 +50,23 @@
     margin-left: 20px;
   }
   #name-header {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    font-family:  "Segoe UI", 'Roboto', 'Oxygen',"Open Sans", "Helvetica Neue", sans-serif;
     font-weight: bold;
     font-size: 18px;
   }
   #tweets-number {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    font-family:  var(--font-familly);
     color: rgb(110, 110, 110);
     font-size: 13px;
   }
   #header-box {
-    width: 100%;
+    /* width: 100%; */
     height: 200px;
-    background-image: url(/src/components/images/header.jpg);
+    margin-top: 53px;
+    background-image: url(https://i.pinimg.com/564x/fb/a3/47/fba34776c01f241f3481d392fd296aaf.jpg);
     background-position: center;
     background-size: cover;
-    display: flex;
-    justify-content: start;
-    align-items: center;
+    object-fit: cover;
   }
   #profile-image {
     width: 127px;
@@ -95,8 +92,7 @@
     border: 0.8px solid #1d9bf0;
     border-radius: 50px;
     font-weight: bold;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    font-family: var(--font-familly);
     color: #444;
     margin-right: 15px;
     font-size: 15px;
@@ -111,8 +107,7 @@
     border: 0.8px solid rgb(0, 0, 0);
     border-radius: 50px;
     font-weight: bold;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    font-family: var(--font-familly);
     color: #fff;
     margin-right: 15px;
     font-size: 15px;
@@ -139,7 +134,7 @@
     font-size: 21px;
   }
   #id-user {
-    font-family: "Segoe UI", "Open Sans", "Helvetica Neue", sans-serif;
+    font-family: var(--font-familly);
     color: var(--etat-color);
   }
   #etat-box {
@@ -163,7 +158,7 @@
     margin-right: 10px;
   }
   #etat {
-    font-family: "Segoe UI", "Open Sans", "Helvetica Neue", sans-serif;
+    font-family: var(--font-familly);
     margin-top: 12px;
     margin-bottom: 12px;
     color: var(--etat-color);
@@ -181,7 +176,7 @@
     color: var(--etat-color);
   }
   #date {
-    font-family:"Segoe UI", "Open Sans", "Helvetica Neue", sans-serif;
+    font-family:var(--font-familly);
     color: var(--etat-color);
     padding-left: 6px;
   }
@@ -195,7 +190,7 @@
     margin-bottom:20px;
   }
   #follow-text {
-    font-family:  "Segoe UI", "Open Sans", "Helvetica Neue", sans-serif;
+    font-family:  var(--font-familly);
     color: var(--etat-color);
     margin-left: 3px;
     text-decoration: none;
@@ -204,7 +199,7 @@
     text-decoration: underline;
   }
   #number-follow {
-    font-family: "Segoe UI", "Open Sans", "Helvetica Neue", sans-serif;
+    font-family: var(--font-familly);
     font-weight: 400;
     color: rgb(255, 255, 255);
   }
@@ -277,8 +272,7 @@
     align-items: center;
   }
   #tweet-name {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    font-family: var(--font-familly);
     font-weight: bold;
   }
   #box-tweet {
@@ -286,12 +280,12 @@
     padding-left: 10px;
   }
   #tweet-id {
-    font-family: "Segoe UI", "Open Sans", "Helvetica Neue", sans-serif;
+    font-family: var(--font-familly);
     color: rgb(104, 104, 104);
     margin-left: 5px;
   }
   #tweet-date {
-    font-family: "Segoe UI", "Open Sans", "Helvetica Neue", sans-serif;
+    font-family: var(--font-familly);
     color: rgb(104, 104, 104);
     margin-left: 5px;
   }
