--- a/src/components/Trends/Trends.css
+++ b/src/components/Trends/Trends.css
@@ -85,10 +85,7 @@
 
 
 @media (max-width: 1100px) {
-    .AsideTrends{
-        display: none   ;
-    }
-    .whotofollow{
+    .whotofollow,.NewToTwitter,.AsideTrends{
         display: none;
     }
 }
