--- a/src/components/posts/Post.css
+++ b/src/components/posts/Post.css
@@ -1,7 +1,7 @@
 .post__section {
     display: flex;
     align-items: flex-start;
-    border-bottom: 1px solid rgba(128, 128, 128, 0.436);
+    border-bottom: 1px solid #8080806f;
     padding-bottom: 15px;
     padding: 10px 10px 0;
     cursor: pointer;
