--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -7,6 +7,7 @@
  
 .sidebar__content{
     height: 100%;
+    width: 258px; 
     display: flex;
     flex-direction: column;
     justify-content: space-between  ;
@@ -27,7 +28,7 @@
     flex-direction: column;
     gap: 2px;
     margin-top: 20px;
-    
+    width: fit-content;
 }
 .sidebar__item{
     border: 1px solid transparent;
@@ -148,6 +149,9 @@
         display: none;
     }
     .sidebar{
+        width: 70px;
+    }
+    .sidebar__content{
         width: 70px;
     }
     .tweet__bottom .icon{
