--- a/src/layouts/main.css
+++ b/src/layouts/main.css
@@ -1,7 +1,7 @@
 .main {
     width: 610px;
     height: 100%;
-    height: 2000PX;
+    /* height: 2000PX; */
     overflow: auto;
     border-right: 1px solid rgba(128, 128, 128, 0.436);
     margin-right: 25px;
