--- a/src/pages/Home/HeadTweet.css
+++ b/src/pages/Home/HeadTweet.css
@@ -2,8 +2,10 @@
     padding-top: 100px;
 }
 .head_name_page {
-    backdrop-filter: blur(20px);
-    backdrop-filter: brightness(14%);
+    /* backdrop-filter: blur(20px);
+    backdrop-filter: brightness(14%); */
+    background: rgba(255, 255, 255, 0);
+    backdrop-filter: blur(7px);
     z-index: 10;
     max-width: 610px;
     width: 100%;
