--- a/src/components/Auth/LoginModal/LoginModal.css
+++ b/src/components/Auth/LoginModal/LoginModal.css
@@ -5,7 +5,7 @@
     width: 100%;
     height: 100vh;
     z-index: 50;
-    background-color: #4d88a125;
+    background-color: rgba(91, 112, 131, 0.4);
     display: none;
 }
 
@@ -31,12 +31,12 @@
     width: 29px;
     height: 29px;
     border-radius: 50%;
+    align-items: center;
     transition: all .2s ease;
 }
 .modal__close,
 .modal__body {
     display: flex;
-    align-items: center;
     justify-content: center;
 }
 
