--- a/src/pages/Auth/Login/Login.css
+++ b/src/pages/Auth/Login/Login.css
@@ -3,15 +3,13 @@
     display: flex;
     flex-direction: column;
 }
-
-.login__container .logo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.login__container.step {
+    width: 300px;
 }
 
+
 .login__title {
-    margin: 28px 0;
+    margin-bottom: 35px;;
     font-size: 30px;
     font-weight: 500;
 }
@@ -21,6 +19,9 @@
     flex-direction: column;
     row-gap: 22px;
     margin-top: 19px;
+}
+.login__buttons.down {
+    margin-top: 0;
 }
 
 .login__buttons button{
@@ -46,31 +47,18 @@
 }
 
 .login__line{
-    position: relative;
-    text-align: center;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     margin: 19px 0;
 }
-.login__line span::before {
-    content: '';
-    position: absolute;
+.login__line div{
     height: 1px;
-    width: 66px;
-    top: 50%;
-    left: 50px;
-    background-color: red;
-    transform: translateX(-50%);
-    text-align: center;
+    width: 100%;
+    background-color: rgb(51, 54, 57);
 }
-.login__line span::before {
-    content: '';
-    position: absolute;
-    height: 1px;
-    width: 66px;
-    top: 50%;
-    right: 40px;
-    background-color: rgb(0, 60, 255);
-    transform: translateX(-50%);
-    text-align: center;
+.login__line span{
+    margin: 0 8px;
 }
 
 .login__input {
@@ -99,14 +87,21 @@
 .login__form_last {
     width: 438px;
 }
-.login__form_last a{
+.login__form_last a {
     margin-left: 5px;   
     color: #1D9BF0;
     font-size: 13px;
 }
+.login__form_last a:hover {
+    text-decoration: underline;
+}
 .login__buttons.form__button button{
     height: 50px;
     font-size: 17px;
+}
+.login__buttons.form__button button.login__disabled__button{
+    opacity: .6;
+    pointer-events: none;
 }
 
 .login__form__signUp {
