--- a/src/layouts/main.css
+++ b/src/layouts/main.css
@@ -3,6 +3,7 @@
     height: 100%;
     /* height: 2000PX; */
     overflow: auto;
+    padding-bottom: 66px;
     border-right: 1px solid rgba(128, 128, 128, 0.436);
     margin-right: 25px;
 }
